[gd_scene load_steps=2 format=3 uid="uid://cg3hylang5fxn"]

[ext_resource type="Script" path="res://main.gd" id="1_j0gfq"]

[node name="Main" type="Node2D"]
script = ExtResource("1_j0gfq")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "AdMob Plugin Demo"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BannerLabel" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Banner Ads"
horizontal_alignment = 1

[node name="LoadBanner" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Load Banner Ad"

[node name="HideBanner" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Hide Banner"

[node name="ShowBanner" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Show Banner"

[node name="RemoveBanner" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Remove Banner"

[node name="HSeparator2" type="HSeparator" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="InterstitialLabel" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Interstitial Ads"
horizontal_alignment = 1

[node name="LoadInterstitial" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Load Interstitial Ad"

[node name="ShowInterstitial" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Show Interstitial Ad"

[node name="HSeparator3" type="HSeparator" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RewardedLabel" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Rewarded Ads"
horizontal_alignment = 1

[node name="LoadRewarded" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Load Rewarded Ad"

[node name="ShowRewarded" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Show Rewarded Ad"

[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/LoadBanner" to="." method="_on_load_banner_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/HideBanner" to="." method="_on_hide_banner_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/ShowBanner" to="." method="_on_show_banner_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/RemoveBanner" to="." method="_on_remove_banner_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/LoadInterstitial" to="." method="_on_load_interstitial_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/ShowInterstitial" to="." method="_on_show_interstitial_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/LoadRewarded" to="." method="_on_load_rewarded_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/ShowRewarded" to="." method="_on_show_rewarded_pressed"]

